# start-pydantic-ai

./: README.md  pyproject.toml
examples/: ddgo_tool.py  google_travel_assistant.py  mcp_agent.py  prompting_structured.py  simple_example.py  structured_call.py  travel_assistant.py
examples/agent_delegation/: agent_delegation.py  prompts.py  schemas.py
